--- a/about.html
+++ b/about.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="style.css">
 
     </head>
     <body>
+        <div id="menu">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+        </div>
         <h2>About us</h2>
-        <p>Hello and welcome</p>
-        <a href="index.html">Click here to go to the home page</a>
+        <p>We are a team of superhero enthusiasts who created this app to share our love for superheroes with the world. Our goal is to provide a comprehensive database of superhero information, including their powers, abilities, and backstories.</p>
+        <p>We believe that superheroes inspire us to be better people and to stand up for what is right. We hope that this app will help you learn more about your favorite superheroes and discover new ones along the way.</p>
     </body>
-        
 </html>
