--- a/index.html
+++ b/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet"  href="style.css" >
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Home Page</h1>
-        <h2>This is a heading</h2>
-        <h3>This is a heading</h3>
-        <h4>This is a heading</h4>
-        <h5>This is a heading</h5>
-        <h6>This is a heading</h6>
-        <p>Hello Everyone</p>
-        <p>This is fun!</p>
-        <p>Click the following image</p>
-        <a href="boat.html"><img src="images/boat.jpg" height="150" width="150">
-            <img src="images/cablecar.jpg" height="150">
-            <img src="images/city.jpg" height="150">
-            <img src="images/plane.jpg" height="150">
-            <a href="http://www.google.com/">Click here to go to Google</a>
-            <a href="http://www.itvarsity.org/">Click here to go to IT Varsity</a>
-            <a href="about.html">Click here to go to the About us</a>
-            </body>
+        <div id="menu">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+        </div>
+        <div class="gallery">
+            <a href="avenger-1.html"><img src="images/avengersImages/avengers_01.jpg"></a>
+            <a href="avenger-2.html"><img src="images/avengersImages/avengers_02.jpg"></a>
+            <a href="avenger-3.html"><img src="images/avengersImages/avengers_03.jpg"></a>  
+            <a href="avenger-4.html"><img src="images/avengersImages/avengers_04.jpg"></a>
+            <a href="avenger-5.html"><img src="images/avengersImages/avengers_05.jpg"></a>
+            <a href="avenger-6.html"><img src="images/avengersImages/avengers_06.jpg"></a>
+        </div>
+    </body>
 </html>
